--- a/scripts/views/beatbucket.html
+++ b/scripts/views/beatbucket.html
@@ -42,23 +42,32 @@
             <div class="playlists" 
                 flex="25"
                 context-menu="playlistsContext">
-                <div class="playlist" 
-                    ng-repeat="name in vm.playlistService.getPlaylistNames()" 
-                    ng-click="vm.setViewPlaylist(name)" 
-                    ng-dblclick="vm.setCurrentPlaylist(name)" 
-                    ng-class="{'viewPlaylist':vm.viewPlaylistName == name , 'currentPlaylist': vm.currentPlaylistName == name}"
-                    layout="row" 
-                    layout-align="start center" 
-                    context-menu="playlistContext"
-                    context-menu-bind="vm.contextMenuTarget"
-                    context-menu-target="name">
-                    <md-icon ng-if="vm.currentPlaylistName != name || vm.showPlayButton" class="default-svg svg-button" md-svg-src="./assets/img/icons/playlist.svg" aria-label="{{name}}"></md-icon>
-                    <md-icon ng-if="vm.currentPlaylistName == name && !vm.showPlayButton" class="default-svg svg-button small-svg" md-svg-src="./assets/img/icons/play.svg" aria-label="{{name}}"></md-icon>                 
-                    {{name}}
-                </div>
+                <div ng-repeat="name in vm.playlistService.getPlaylistNames()">
+                    <div class="playlist"                                        
+                        ng-hide="vm.isRenamingPlaylist && vm.renamingPlaylistName == name"
+                        ng-click="vm.setViewPlaylist(name)"
+                        ng-dblclick="vm.setCurrentPlaylist(name)" 
+                        ng-class="{'viewPlaylist':vm.viewPlaylistName == name , 'currentPlaylist': vm.currentPlaylistName == name}"
+                        layout="row" 
+                        layout-align="start center" 
+                        context-menu="playlistContext"
+                        context-menu-bind="vm.contextMenuTarget"
+                        context-menu-target="name">
+                        <md-icon ng-if="vm.currentPlaylistName != name || vm.showPlayButton" class="default-svg svg-button" md-svg-src="./assets/img/icons/playlist.svg" aria-label="{{name}}"></md-icon>
+                        <md-icon ng-if="vm.currentPlaylistName == name && !vm.showPlayButton" class="default-svg svg-button small-svg" md-svg-src="./assets/img/icons/play.svg" aria-label="{{name}}"></md-icon>                 
+                        {{name}}
+                    </div>
+                    <div ng-if="vm.isRenamingPlaylist && vm.renamingPlaylistName == name">
+                        <custom-input class="newPlaylist"
+                                    placeholder="Playlist name"
+                                    default-value="name"
+                                    on-esc="vm.hideRenamePlaylist"
+                                    on-enter="vm.renamePlaylist"></custom-input>
+                    </div>
+                </div>                                
                 <div ng-if="vm.newPlaylist">
                     <custom-input class="newPlaylist"
-                                placeholder="Playlist name"                              
+                                placeholder="Playlist name"
                                 on-esc="vm.hideNewPlaylist"
                                 on-enter="vm.createNewPlaylist"></custom-input>
                 </div>
@@ -120,7 +129,8 @@
     <div class="menu" id="playlistContext">
         <ul class="menu-options">
             <li class="menu-option" ng-click="vm.showNewPlaylist()">New playlist</li>
-            <li class="menu-option" ng-click="vm.removePlaylist()">Delete playlist</li>        
+            <li class="menu-option" ng-click="vm.showRenamePlaylist()">Rename playlist</li>
+            <li class="menu-option" ng-click="vm.removePlaylist()">Delete playlist</li>
         </ul>
     </div>
     <div class="menu" id="playlistsContext">
