--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -197,7 +197,7 @@ html, body {
     .menu .menu-options .menu-separator{
         margin: 0 5px;
         background-color: transparent;
-        border-bottom: 1px solid themed('color-contextmenu-border;');
+        border-bottom: 1px solid themed('color-contextmenu-border');
     }
 
     .md-tooltip .md-content {
@@ -295,15 +295,6 @@ html, body {
 
     .label-container {
         color: themed('color-label-font');        
-    }
-
-    .menu {        
-        background-color: themed('color-contextmenu-background');
-        color: themed('color-contextmenu-font');
-    }
-
-    .menu .menu-options .menu-separator{        
-        border-bottom: 1px solid themed('color-contextmenu-border;');
     }
 }
 
@@ -420,31 +411,6 @@ html, body {
 
 .timing{
     margin-right: 2px;
-}
-
-.menu {
-    position: absolute;
-    width: 120px;
-    box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2);    
-    display: none;    
-}
-
-.menu .menu-options {    
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.menu .menu-options .menu-option {
-    font-weight: 500;
-    font-size: 10pt;
-    padding: 5px 10px;
-    cursor: pointer;    
-}
-
-.menu .menu-options .menu-separator{
-    margin: 0 5px;
-    background-color: transparent;    
 }
 
 .md-tooltip .md-content {
